# FloatNote

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  assistant.html  history.html  index.html  package-lock.json  package.json  popup.html  settings.html  tsconfig.json  vite.config.ts  wdio.browser.conf.ts  wdio.conf.ts
.github/: release-preview-notes.md
.github/workflows/: ci.yml  release.yml
assets/: README.md
docs/adr/: 0001-local-file-and-sidecar-boundaries.md  0002-node-sidecar.md  0003-project-space-format.md  0004-floatnote-virtual-agent-workspace.md  README.md
docs/architecture/: backend.md  data-flow.md  frontend.md  overview.md  packaging.md  runtime-boundaries.md  security.md  sidecar.md
docs/development/: cross-platform.md  design-system.md  release.md  setup.md  testing.md
scripts/: app-icon.test.mjs  local-ci.mjs  local-ci.test.mjs  native-review-doctor.mjs  native-review-doctor.test.mjs  release-version.mjs  release-version.test.mjs  review-infra-config.test.mjs  review-ui.mjs  review-ui.test.mjs  tauri-runner.test.mjs  tauri.mjs
scripts/macos-dmg-tools/: SetFile
shared/note-logic/: AGENTS.md  package.json  tsconfig.json
sidecar/: AGENTS.md  package-lock.json  package.json  tsconfig.json
sidecar/scripts/: bundle.mjs  prepare-tauri.mjs  smoke.mjs
sidecar/src/: agent.test.ts  agent.ts  configuration-gate.test.ts  configuration-gate.ts  event-translate.ts  main.ts  matching.test.ts  matching.ts  model-config.test.ts  model-config.ts  model.test.ts  model.ts  note-tools.test.ts  note-tools.ts  one-shot.test.ts  one-shot.ts  prompt-compose.test.ts  prompt-compose.ts  protocol.test.ts  protocol.ts  release.test.ts  release.ts  runner.ts  skills.test.ts  skills.ts  tool-title.test.ts  tool-title.ts  tutor-prompt.test.ts  tutor-prompt.ts  web-tools.test.ts  web-tools.ts
sidecar/test/: harness.ts
src/: styles.css
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json  tauri.review.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/skills/inbox-to-actions/: SKILL.md
src-tauri/resources/skills/organize/: SKILL.md
src-tauri/resources/skills/plan-actions/: SKILL.md
src-tauri/resources/skills/socratic-review/: SKILL.md
src-tauri/resources/skills/structure-piece/: SKILL.md
src-tauri/resources/skills/tutor/: SKILL.md
src-tauri/resources/skills/write/: SKILL.md
src-tauri/src/: AGENTS.md  agent.rs  assistant_window.rs  ax_copy.rs  capture.rs  chat_history.rs  commands.rs  config.rs  cursor.rs  lib.rs  main.rs  notes.rs  paths.rs  platform.rs  popup.rs  popup_hover.rs  project.rs  quote.rs  selection_intent.rs  selection_monitor.rs  selection_probe.rs  shortcuts.rs  source.rs  state.rs  testutil.rs  trash.rs  tray.rs  versions.rs  watcher.rs  windows.rs
src-tauri/src/agent/: handlers.rs  protocol.rs  runner.rs  workspace.rs
src-tauri/src/commands/: agent.rs  chat.rs  settings.rs  versions.rs
src/assistant/: AGENTS.md  action-card.test.ts  action-card.ts  assistant-ui.test.ts  assistant.test.ts  assistant.ts  blocks.test.ts  blocks.ts  dock-dropdown.ts  focused-paper-css.test.ts  main.ts  markdown-surfaces.test.ts  markdown.test.ts  markdown.ts  mention-picker.test.ts  mention-picker.ts  permission-allow-button.test.ts  permission-allow-button.ts  permission-bubble.test.ts  permission-bubble.ts  permission-dialog-fallback.test.ts  permission-dialog.test.ts  permission-dialog.ts  permission-diff.test.ts  permission-diff.ts  permission-model.test.ts  permission-model.ts  permission-review-css.test.ts  render.test.ts  render.ts  selection-message-view.test.ts  skill-picker.test.ts  skill-picker.ts  styles.css
src/history/: history-model.test.ts  history-model.ts  history-ui.test.ts  history-ui.ts  main.ts  styles.css
src/note/: AGENTS.md  agent-write-navigation.test.ts  agent-write-navigation.ts  agent.ts  append.test.ts  append.ts  assistant-controller.test.ts  assistant-controller.ts  automation-toasts.ts  chat-history-format.test.ts  chat-history-format.ts  chat-history.ts  dark-theme-css.test.ts  editor.test.ts  editor.ts  empty-state.test.ts  empty-state.ts  font-size.ts  hard-break-spacing.ts  (+83 more)
(+254 files in other folders)
