[package]
name = "floatnote"
version = "0.1.0"
edition = "2021"

[lib]
name = "floatnote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
notify = "7"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
trash = "5"
base64 = "0.22"
percent-encoding = "2"
tokio = { version = "1", features = ["sync", "time"] }

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.1"
core-graphics = { version = "0.25", features = ["elcapitan"] }
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSArray", "NSString", "NSData", "NSURL"] }
objc2-app-kit = { version = "0.2", features = ["NSWorkspace", "NSRunningApplication", "NSImage", "NSPasteboard", "NSPasteboardItem", "libc"] }
image = { version = "0.25", features = ["tiff", "png"] }
plist = "1.9"
