[package]
name = "floatnote"
version = "0.1.0"
edition = "2021"

[lib]
name = "floatnote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
strip = "symbols"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
e2e-wdio = ["dep:tauri-plugin-wdio", "dep:tauri-plugin-wdio-webdriver"]

[dependencies]
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
notify = "7"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
# WebdriverIO 原生诊断仅由 e2e-wdio feature 启用。
tauri-plugin-wdio = { version = "1", optional = true }
tauri-plugin-wdio-webdriver = { version = "1", optional = true }
trash = "5"
base64 = "0.22"
percent-encoding = "2"
tokio = { version = "1", features = ["sync", "time"] }
cap-std = "4"
getrandom = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.1"
core-graphics = { version = "0.25", features = ["elcapitan"] }
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSArray", "NSString", "NSData", "NSURL"] }
objc2-app-kit = { version = "0.2", features = ["NSWorkspace", "NSRunningApplication", "NSImage", "NSPasteboard", "NSPasteboardItem", "libc"] }
image = { version = "0.25", default-features = false, features = ["tiff", "png"] }
plist = "1.9"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
